# Win32ForNode

./: CMakeLists.txt  README.md  functions.h++  internalfunctions.h++  main.cpp  package.json
Win32ForNodeJS/: CMakeLists.txt  binding.gyp  classes.h++  compiler.yaml  constants.h++  fake.cpp  functions.h++  internalfunctions.h++  main.cpp  main.js
